--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "strictPropertyInitialization": true, /* Enable strict checking of property initialization in classes. */
     "noImplicitThis": true, /* Raise error on 'this' expressions with an implied 'any' type. */
     "alwaysStrict": true, /* Parse in strict mode and emit "use strict" for each source file. */
-    "noUnusedParameters": true, /* Report errors on unused parameters. */
+    "noUnusedParameters": false, /* Report errors on unused parameters. */
     "noUnusedLocals": true,
     "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
