--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "antlr4": "^4.7.2",
+    "loglevel": "^1.7.0",
     "ts-loader": "^7.0.5",
     "typescript": "^4.0.2"
   },
