--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@types/crypto-js": "^4.0.1",
     "antlr4": "^4.7.2",
     "any-base": "^1.1.0",
+    "axios": "^0.21.0",
     "crypto-js": "^4.0.0",
     "delay": "^4.4.0",
     "loglevel": "^1.7.0",
