--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "extends": "@tsconfig/node10/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es5",
+    "lib": [ "es2015", "dom" ],
     "declaration": true,
     "noImplicitAny": true,
     "removeComments": true,
     "moduleResolution": "node",
-    //"inlineSourceMap": true,
     "outDir": "./dist",
     "strictFunctionTypes": true, /* Enable strict checking of function types. */
     "strictPropertyInitialization": true, /* Enable strict checking of property initialization in classes. */
@@ -18,11 +18,16 @@
     "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     "strict": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "downlevelIteration": true
   },
-  "include": ["lib"],
+  "include": [
+    "lib",
+    "index.d.ts"
+  ],
   "exclude": [
     "node_modules",
-    "test"
+    "test",
+    "test-integration"
   ]
 }
