Temporary add dist to package.json

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "url": "https://github.com/NUMtechnology/num-javascript-client.git"
   },
   "files": [
+    "dist/**/*",
     "lib/**/*",
     "index.d.ts",
     "index.js"
