--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "num-javascript-client",
+  "name": "num-client",
   "version": "0.0.1",
   "description": "A MODL interpreter in TypeScript",
   "types": "index.d.ts",
   "dependencies": {
     "@types/crypto-js": "^4.0.1",
-    "antlr4": "^4.7.2",
     "any-base": "^1.1.0",
     "axios": "^0.21.0",
     "crypto-js": "^4.0.0",
@@ -23,7 +22,7 @@
     "@types/node": "^14.0.13",
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0"
@@ -41,7 +40,7 @@
     "format": "prettier --write \"**/*.ts\"",
     "lint": "tslint --fix -p tsconfig.json",
     "prepare": "npm test",
-    "publish": "git push && git push --tags"
+    "publish": "git push && git push --tags --force"
   },
   "author": "NUM Technology Ltd",
   "license": "Apache-2.0",
