--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
+    "browserify": "^17.0.0",
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
@@ -40,7 +41,8 @@
     "format": "prettier --write \"**/*.ts\"",
     "lint": "tslint --fix -p tsconfig.json",
     "prepare": "npm test",
-    "publish": "git push && git push --tags --force"
+    "publish": "git push && git push --tags --force",
+    "browserify": "mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js"
   },
   "author": "NUM Technology Ltd",
   "license": "Apache-2.0",
