--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "num-client",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "description": "A NUM Protocol Client in TypeScript",
   "types": "index.d.ts",
   "dependencies": {
@@ -54,6 +54,7 @@
     "dist/**/*",
     "lib/**/*",
     "index.d.ts",
-    "index.js"
+    "index.js",
+    "web/*"
   ]
 }
