--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     "strict": true,
-    "sourceMap": true,
-    "downlevelIteration": true
+    "sourceMap": true
   },
   "include": [
     "lib",
