--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "num-client",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "A NUM Protocol Client in TypeScript",
   "types": "index.d.ts",
   "dependencies": {
@@ -48,9 +48,8 @@
     "doc": "typedoc",
     "format": "prettier --write \"**/*.ts\"",
     "lint": "eslint --fix lib/**",
-    "prepare": "npm test",
-    "publish": "git push && git push --tags --force",
-    "browserify": "mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js"
+    "prepare": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version}",
+    "publish": "git push && git push --tags --force"
   },
   "author": "NUM Technology Ltd",
   "license": "Apache-2.0",
