Use `src` for source TS files instead of `lib`

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-node_modules
-
-.idea
-*.tar
-docs
-dist
-web
-coverage
-.nyc_output
+/*
+!env
+!test
+!test-integration
+!src
+!.gitignore
+!*.json
+!*.ts
+!.eslintrc.js
+!index.js
+!*.md
+!*.lock
+!.github
+!.npmignore
