--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "ts-node": "^8.10.2",
+    "ts-register": "^0.1.0",
     "tslint": "^6.1.3"
   },
   "scripts": {
@@ -47,9 +48,9 @@
     "build": "tsc",
     "doc": "typedoc",
     "format": "prettier --write \"**/*.ts\"",
-    "lint": "eslint --fix lib/**",
-    "prepare": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version}",
-    "publish": "git push && git push --tags --force"
+    "lint": "eslint --fix src/**",
+    "prepare": "npm test",
+    "publish": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version} && git push && git push --tags"
   },
   "author": "NUM Technology Ltd",
   "license": "Apache-2.0",
@@ -59,7 +60,7 @@
   },
   "files": [
     "dist/**/*",
-    "lib/**/*",
+    "src/**/*",
     "index.d.ts",
     "index.js",
     "web/*"
