--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^4.7.0",
     "browserify": "^17.0.0",
     "chai": "^4.2.0",
+    "deep-eql": "^4.0.0",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jsdoc": "^30.7.7",
