--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "lib": [ "es2015", "dom" ],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "declaration": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "removeComments": true,
     "moduleResolution": "node",
     "outDir": "./dist",
