Added SchemaMapper to integration tests. Still WIP.

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "preversion": "npm run format && npm run lint && npm run doc && npm run build",
     "build": "tsc",
     "doc": "typedoc",
-    "format": "prettier --write \"**/*.ts\"",
-    "lint": "eslint --fix src/**",
+    "format": "prettier --write \"./src/*.ts\" ./index.d.ts",
+    "lint": "eslint --fix ./src/**",
     "prepare": "npm test",
     "publish": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version} && git push && git push --tags"
   },
