--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "format": "prettier --write \"./src/*.ts\" ./index.d.ts",
     "lint": "eslint --fix ./src/**",
     "prepare": "npm test",
+    "pack": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js",
     "publish": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version} && git push && git push --tags"
   },
   "author": "NUM Technology Ltd",
