--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/node10/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "es2015",
       "dom"
@@ -16,15 +16,15 @@
     "strictPropertyInitialization": true, /* Enable strict checking of property initialization in classes. */
     "noImplicitThis": true, /* Raise error on 'this' expressions with an implied 'any' type. */
     "alwaysStrict": true, /* Parse in strict mode and emit "use strict" for each source file. */
-    "noUnusedParameters": true, /* Report errors on unused parameters. */
-    "noUnusedLocals": true,
-    "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+    "noUnusedParameters": false, /* Report errors on unused parameters. */
+    "noUnusedLocals": false,
+    "noImplicitReturns": false, /* Report error when not all code paths in function return a value. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     "strict": true,
     "sourceMap": true
   },
   "include": [
-    "src/*.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules"
