--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "mocha": "^8.1.3",
     "ts-node": "^8.10.2",
     "ts-register": "^0.1.0",
