--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "num-client",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A NUM Protocol Client in TypeScript",
-  "types": "dist/index.d.ts",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "@types/crypto-js": "^4.0.1",
     "ajv": "^8.0.3",
@@ -13,10 +13,10 @@
     "delay": "^4.4.0",
     "loglevel": "^1.7.0",
     "loglevel-plugin-prefix": "^0.8.4",
-    "modl-interpreter": "0.0.7",
+    "modl-interpreter": "0.0.8",
     "object-unpacker": "0.0.7",
+    "process": "^0.11.10",
     "punycode": "^2.1.1",
-    "ts-loader": "^7.0.5",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
@@ -36,11 +36,14 @@
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
+    "imports-loader": "^2.0.0",
     "mocha": "^8.1.3",
+    "prettier": "^2.1.2",
+    "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "ts-register": "^0.1.0",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "webpack": "^5.23.0"
   },
   "scripts": {
     "test": "mocha --require ts-node/register 'test/**/*.ts'",
@@ -55,8 +58,7 @@
     "format": "prettier --write \"./src/*.ts\" ",
     "lint": "eslint --fix ./src/**",
     "prepare": "npm test",
-    "pack": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js",
-    "publish": "npm test && mkdir -p web && browserify -r ./index.js:num-client >web/${npm_package_name}-${npm_package_version}.js && cp web/${npm_package_name}-${npm_package_version}.js web/${npm_package_name}-latest.js && git tag v${npm_package_version} && git push && git push --tags"
+    "publish": "git push && git push --tags --force"
   },
   "author": "NUM Technology Ltd",
   "license": "Apache-2.0",
@@ -66,7 +68,6 @@
   },
   "files": [
     "dist",
-    "index.js",
-    "web/*"
+    "index.js"
   ]
 }
