--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/node10/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es5",
     "lib": [
       "es2015",
       "dom"
@@ -24,9 +24,11 @@
     "sourceMap": true
   },
   "include": [
-    "src/**/*"
+    "src",
+    "index.d.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "test"
   ]
 }
