--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "num-client",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "description": "A NUM Protocol Client in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,11 +13,11 @@
     "delay": "^4.4.0",
     "loglevel": "^1.7.0",
     "loglevel-plugin-prefix": "^0.8.4",
-    "modl-interpreter": "0.0.10",
-    "object-unpacker": "0.0.8",
+    "modl-interpreter": "0.0.11",
+    "object-unpacker": "0.0.10",
     "process": "^0.11.10",
     "punycode": "^2.1.1",
-    "typescript": "^4.0.2"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@tsconfig/node10": "^1.0.7",
@@ -27,7 +27,6 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
-    "browserify": "^17.0.0",
     "chai": "^4.2.0",
     "deep-eql": "^4.0.0",
     "eslint": "^7.13.0",
@@ -43,6 +42,7 @@
     "ts-node": "^8.10.2",
     "ts-register": "^0.1.0",
     "tslint": "^6.1.3",
+    "typescript": "^4.0.2",
     "webpack": "^5.23.0"
   },
   "scripts": {
