Auto-build the webpack bundle.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "ts-register": "^0.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2",
-    "webpack": "^5.23.0"
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.7.0"
   },
   "scripts": {
     "test": "mocha --require ts-node/register 'test/**/*.ts'",
@@ -57,7 +58,7 @@
     "doc": "typedoc",
     "format": "prettier --write \"./src/*.ts\" ",
     "lint": "eslint --fix ./src/**",
-    "prepare": "npm test",
+    "prepare": "npm test && webpack",
     "publish": "git push && git push --tags --force"
   },
   "author": "NUM Technology Ltd",
