--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
+      "name": "Mocha Current File",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "${file}"
       ],
-      "program": "${workspaceFolder}/dist/scratch.js",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ]
+      "cwd": "${workspaceRoot}"
     }
   ]
 }
