Add chalk dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "num-client",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A NUM Protocol Client in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,6 +9,7 @@
     "ajv": "^8.0.3",
     "any-base": "^1.1.0",
     "axios": "^0.21.1",
+    "chalk": "^4.1.2",
     "crypto-js": "^4.0.0",
     "delay": "^4.4.0",
     "loglevel": "^1.7.0",
