--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "num-client",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "A NUM Protocol Client in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/crypto-js": "^4.0.1",
     "ajv": "^8.0.3",
+    "ajv-formats": "^2.1.1",
     "any-base": "^1.1.0",
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
