--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "num-client",
-  "version": "3.0.2-rc1",
+  "version": "3.0.2",
   "description": "A NUM Protocol Client in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
