--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "num-client",
-  "version": "3.0.5",
+  "version": "4.0.0",
   "description": "A NUM Protocol Client in TypeScript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "ajv": "^8.0.3",
-    "ajv-formats": "^2.1.1",
     "any-base": "^1.1.0",
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "delay": "^4.4.0",
     "modl-interpreter": "0.0.20",
-    "object-unpacker": "1.0.2",
+    "num-easy-log": "^0.0.2",
     "process": "^0.11.10",
     "punycode": "^2.1.1",
     "sha1": "^1.1.1",
@@ -22,6 +20,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
+    "@types/sha1": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
@@ -34,7 +33,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
     "imports-loader": "^2.0.0",
-    "mocha": "^8.1.3",
+    "mocha": "^10.1.0",
     "prettier": "^2.1.2",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
